# CRUD_API

./: .gitignore  core.py  create_notes.sql  pyproject.toml  requirements.txt
app/: crud.py  db.py  domain.py  main.py  schemas.py  services.py
app/api/: notes.py
