[tool.poetry]
name = "crud-api"
version = "0.1.0"
description = ""
authors = ["DJFriendlyFire <melnikovich2014@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.131.0"}
psycopg = "^3.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
